--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,13 +14,12 @@
         <!-- Menu -->
         <nav class="oliven-main-menu">
             <ul>
-                <li><a href="index.html#home">Начало</a></li>
-                <li><a href="index.html#couple">Ани и Димитър</a></li>
-                <li><a href="index.html#story">Нашата история</a></li>
-                <li><a href="index.html#friends">Кумуват</a></li>
-                <li><a href="index.html#organization">Програма</a></li>
-                <li><a href="index.html#whenwhere">Кога и къде</a></li>
-                <li><a href="index.html#gift">Потвърдете присъствието си</a></li>
+                <li><a >Начало</a></li>
+                <li><a>Ани и Димитър</a></li>
+                <li><a >Нашата история</a></li>
+                <li><a >Кумуват</a></li>
+                <li><a >Програма</a></li>
+                <li><a >Потвърдете присъствието си</a></li>
             </ul>
         </nav>
         <!-- Sidebar Footer -->
