--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -128,7 +128,7 @@
         <div class="row mb-60">
             <div class="col-md-6">
                 <div class="item toright mb-30 animate-box" data-animate-effect="fadeInLeft">
-                    <div class="img"> <img src="assets/images/bride.jpg" alt=""> </div>
+                    <div class="img"> <img src="assets/images/ivana.jpg" alt=""> </div>
                     <div class="info valign">
                         <div class="full-width">
                             <h6>Ивана Цанкова <i class="ti-heart"></i></h6> <span>Кумата</span>
@@ -146,7 +146,7 @@
             </div>
             <div class="col-md-6">
                 <div class="item mb-30 animate-box" data-animate-effect="fadeInRight">
-                    <div class="img"> <img src="assets/images/groom.jpg" alt=""> </div>
+                    <div class="img"> <img src="assets/images/blago.jpg" alt=""> </div>
                     <div class="info valign">
                         <div class="full-width">
                             <h6>Благовест Сербезов<i class="ti-heart"></i></h6> <span>Кумът</span>
