--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -196,7 +196,7 @@
                 <h2 class="custom-font numb">01</h2>
                 <h6 class="title">Църковен Брак</h6>
                 <p style="font-weight: bold"><i class="ti-location-pin"></i> Църква "Света Богородица", гр. Пазарджик  
-                    <a class="btn btn-secondary" href="https://g.co/kgs/vYz4YAg" style="padding: 5px">
+                    <a class="btn btn-secondary" href="https://maps.app.goo.gl/V1dqt559VBDcy4mHA" style="padding: 5px">
                         <svg style="width: 13px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                             <path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/>
                         </svg>
@@ -318,7 +318,7 @@
                   
                         <div class="col-md-12">
                             <div class="form-group">
-                                <span class="btn btn-secondary" 
+                                <span class="btn btn-secondary" style="padding: 5px"
                                       (click)="submit()">Изпрати</span>
                               </div>
                         </div>
