--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -1,5 +1,5 @@
 <header id="home" class="header valign bg-img parallaxie" style="position: relative; background-image: url('assets/images/slider.jpg'); background-size: cover; background-position: center center;">
-    <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.85); z-index: 1;"></div>
+    <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.6); z-index: 1;"></div>
     <div class="container" style="position: relative; z-index: 2;">
         <div class="row">
             <div class="col-md-12 text-center caption">
@@ -304,6 +304,19 @@
                             <div class="form-group">
                                 <label style="font-weight: bold">6. Допълнителен коментар?</label> <br>
                                 <textarea style="color: black; background: #DCDCDC" [(ngModel)]="message" class="form-control" name="message" placeholder="Коментар"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="form-group">
+                               <small style="font-size: 10px">Призив! 
+                                За да допринесете към нашия празник да бъде още по-вълнуваш и приказен не се изисква много освен да носите усмивки и настроение.Ние ще приемем и уважим всеки ваш жест,но ако все пак се чудите с какво да ни дарувате,можете да оставите избора в наши ръце.<br>
+                                
+                                По желание! <br>
+                                Както младостта,така и късната пролет са изпълнени с жизненост,чистота и цветове,затова ако желаете можете да се впишете в тематиката на нашето празненство като избягвате строгите тоалети и мрачните цветове,а заложите на свежа елегантност и усещане за топлина и стил.<br>
+                                
+                                 Благодарности! <br>
+                                Аз- Ани и Аз-Димитър, ще бъдем изключително щастливи,ако приемете нашата покана! <br>
+                                *Моля потвърдете присъствието си до 20.05!</small>
                             </div>
                         </div>
                   
