--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-12 text-center caption">
                 <h1 class="animate-box" data-animate-effect="fadeInUp" style="padding-bottom: 300px">ПОКАНА</h1>
-                <h1 class="animate-box" data-animate-effect="fadeInUp">Ани & Димтър</h1>
+                <h1 class="animate-box" data-animate-effect="fadeInUp">Ани & Димитър</h1>
                 <h5 class="animate-box" data-animate-effect="fadeInUp">15 ЮНИ, 2025 – Вила Юстина</h5>
             </div>
         </div>
@@ -26,9 +26,9 @@
         <div class="row">
             <div class="col-md-12 text-center animate-box" data-animate-effect="fadeInUp">
                 <span >ПОКАНАТА ВАЖИ ЗА</span>
-                <h3 class="oliven-couple-title">{{user?.name}}</h3>
+                <h3 class="oliven-couple-title" style="text-weight: bold">{{user?.name}}</h3>
                 <h4 style="font-size: 35px !important" class="oliven-couple-subtitle">С радост Ви каним да бъдете част от нашия специален ден!</h4>
-                <span>Моля да потвърдите присъствието си по-долу</span> 
+                <span>Моля да потвърдите присъствието си по-долу!</span> 
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
                     <div class="img"> <img src="assets/images/groom.jpg" alt=""> </div>
                     <div class="info valign">
                         <div class="full-width">
-                            <h6>Димитър Димитров<i class="ti-heart"></i></h6> <span>Младоженецът</span>
+                            <h6>Димитър Димитров <i class="ti-heart"></i></h6> <span>Младоженецът</span>
                             <div class="social">
                                 <div class="full-width">
                                     <a href="https://www.facebook.com/mitaka.dimitrov.5" class="icon"> <i class="ti-facebook"></i> </a>
@@ -86,7 +86,7 @@
             <div class="col-md-12">
                 <ul>
                     <li><span id="days"></span>Дни</li>
-                    <li><span id="hours"></span>Часоа</li>
+                    <li><span id="hours"></span>Часа</li>
                     <li><span id="minutes"></span>Минути</li>
                     <li><span id="seconds"></span>Секунди</li>
                 </ul>
@@ -148,7 +148,7 @@
                     <div class="img"> <img src="assets/images/blago.jpg" alt=""> </div>
                     <div class="info valign">
                         <div class="full-width">
-                            <h6>Благовест Сербезов<i class="ti-heart"></i></h6> <span>Кумът</span>
+                            <h6>Благовест Сербезов <i class="ti-heart"></i></h6> <span>Кумът</span>
                             <div class="social">
                                 <div class="full-width">
                                     <a href="https://www.facebook.com/blagovest.serbezov" class="icon"> <i class="ti-facebook"></i> </a>
@@ -183,7 +183,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 mb-30">
-                <span class="oliven-title-meta">Кога и Къде</span>
+                <span class="oliven-title-meta">Кога и Къде?</span>
                 <h2 class="oliven-title">Програма на Събитието</h2>
             </div>
         </div>
@@ -319,13 +319,14 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                <small style="font-size: 10px;"><span style="font-size: 15px; font-weight: bold">Призив!</span><br> 
-                                За да допринесете към нашия празник да бъде още по-вълнуваш и приказен не се изисква много освен да носите усмивки и настроение.Ние ще приемем и уважим всеки ваш жест,но ако все пак се чудите с какво да ни дарувате,можете да оставите избора в наши ръце.<br>
+                                Ще се зарадваме на  
+всеки ваш жест от сърце. А ако се чудите какво да поднесете, понякога най-добрият дар е онзи, който ни дава възможност да изберем сами.<br>
                                 
                                 <span style="font-size: 15px; font-weight: bold">По желание!</span> <br>
-                                Както младостта,така и късната пролет са изпълнени с жизненост,чистота и цветове,затова ако желаете можете да се впишете в тематиката на нашето празненство като избягвате строгите тоалети и мрачните цветове,а заложите на свежа елегантност и усещане за топлина и стил.<br>
+                                Както младостта, така и късната пролет, са изпълнени с жизненост, чистота и цветове, затова ако желаете можете да се впишете в тематиката на нашето празненство, като избягвате строгите тоалети и мрачните цветове, а заложите на свежа елегантност и усещане за топлина и стил.<br>
                                 
                                 <span style="font-size: 15px; font-weight: bold">Благодарности! </span> <br>
-                                Аз - Ани и Аз - Димитър, ще бъдем изключително щастливи,ако приемете нашата покана! <br>
+                                Аз - Ани и Аз - Димитър, ще бъдем изключително щастливи, ако приемете нашата покана! <br>
                                 <span style="color: red; font-weight: bold">*Моля потвърдете присъствието си до 20.05!</span></small>
                             </div>
                         </div>
