--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -26,9 +26,8 @@
         <div class="row">
             <div class="col-md-12 text-center animate-box" data-animate-effect="fadeInUp">
                 <span >ПОКАНАТА ВАЖИ ЗА</span>
-                <h3 style="font-weight: bold; font-size: 50px; font-family: 'Oswald', sans-serif;">
-                    {{user?.name}}
-                  </h3>                <h4 style="font-size: 35px !important" class="oliven-couple-subtitle">С радост Ви каним да бъдете част от нашия специален ден!</h4>
+                <h3 class="oliven-couple-title" style="text-weight: bold">{{user?.name}}</h3>
+                <h4 style="font-size: 35px !important" class="oliven-couple-subtitle">С радост Ви каним да бъдете част от нашия специален ден!</h4>
                 <span>Моля да потвърдите присъствието си по-долу!</span> 
             </div>
         </div>
@@ -111,6 +110,7 @@
 <p>Минаха година, две – ставаха все по-сигурни те! С чисти усмивки, желания и страст се завърза техният любовен романс.</p>
 <p>Ръка в ръка с безкрайна сила, любовта им вечност е разкрила. Мина лете, мина зима – сред свят и бури, в светлина, Ани и Димитър сбъднаха една мечта.</p>
 
+<h4>10 дек. 2024, Тя каза ДА!</h4>
 <p>На десетата година смелост той събра – във вярност да ѝ се врече с надеждата да чуе: "Завинаги обичам те."</p>
 <p>С копнеж, желание, без страх, със сълзи на очи и с тихички глас, изрече тя думата “ДА” и щастие обзе нейната душа.</p>
 <p>Две съдби високи във вярност се вричат, с пламък негасим, с вечна прегръдка, в обет неделим. Свързани са те – две души, една любов, безкрайни мечти!<br><strong>Ани и Димитър</strong></p>
