--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -111,7 +111,7 @@
 <p>Ръка в ръка с безкрайна сила, любовта им вечност е разкрила. Мина лете, мина зима – сред свят и бури, в светлина, Ани и Димитър сбъднаха една мечта.</p>
 
 <p>На десетата година смелост той събра – във вярност да ѝ се врече с надеждата да чуе: "Завинаги обичам те."</p>
-<p>С копнеж, желание, без страх, със сълзи на очи и с тихички глас, изрече тя думата “ДА” и щастие обзе нейната душа.</p>
+<p>С копнеж, желание, без страх, със сълзи на очи и с тихичкия глас, изрече тя думата “ДА” и щастие обзе нейната душа.</p>
 <p>Две съдби високи във вярност се вричат, с пламък негасим, с вечна прегръдка, в обет неделим. Свързани са те – две души, една любов, безкрайни мечти!<br><strong>Ани и Димитър</strong></p>
 
             </div>
